--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@types/passport-jwt": "^4.0.1",
+    "assert": "^2.1.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.5.2",
